app/assets/stylesheets/_posts.scss
.posts {
  margin-top: -145px;
  overflow: hidden;
  padding-top: 140px;
  .post {
    margin-bottom: 140px;
  }
}

.post {
  margin-bottom: 140px;
  padding-top: 18px;
  position: relative;

  .heading {
    border-bottom: 1px dotted rgba($default-color, .8);
    display: table;
    table-layout: fixed;
    width: 100%;
  }

  .heading-inner-wrapper {
    display: table-row;
    line-height: 1;
  }

  .post-title, .post-published-at {
    display: table-cell;
    padding-bottom: 2px;
    vertical-align: text-bottom;
  }

  .post-title {
    margin: 0;
    width: 100%;
    a {
      border-bottom: none;
      color: $default-color;
      padding-bottom: 0;
    }
  }

  .post-published-at {
    display: none;
  }

  @include respond-to(sm) {
    .post-title {
      width: 70%;
    }
    .post-published-at {
      display: table-cell;
      font-size: .75em;
      text-align: right;
      width: 30%;
    }
  }

  > .post-content {
    backface-visibility: hidden;
    @include depth(post-content);
    padding: 0 $page-padding-horizontal;
    position: relative;
    transform: translateZ(1000px); /* Safari bug fix http://stackoverflow.com/questions/18146511/bug-in-css3-rotatey-transition-on-safari */
    @include respond-to(md) {
      padding: 0 $page-padding-horizontal-md;
    }

    figure {
      margin: 2em auto;
      position: relative;
      text-align: center;
      figcaption {
        margin-bottom: .5em;
        text-align: center;
      }
      a {
        @extend a.no-underline;
        display: inline-block;
      }
      img:not(.emoji) {
        border-radius: 4px;
        box-shadow: 0 0 6px 0 rgba(black, .15);
        display: block;
        max-width: 100%;
        position: relative;
      }
      &:before {
        border-top: 1px dotted rgba(white, .1);
        content: '';
        display: block;
        position: absolute;
        top: 45%;
        width: 100%;
      }
    }
  }

  .post-tags {
    font-size: .75em;
    margin-top: 2em;
  }

  .post-tag {
    display: inline-block;
    font-weight: $medium-font-weight;
    margin-right: .5em;
  }

  /***************************************************/
  /* Slopes */
  /***************************************************/

  .post-top-slope, .post-bottom-slope {
    display: none;
  }

  &:nth-of-type(4n+1), &:nth-of-type(4n+3) {
    .post-top-slope {
      @extend .top-slope;
      @include depth(post-top-slope);
    }
    .post-bottom-slope {
      @extend .bottom-slope;
      @include depth(post-bottom-slope);
    }
  }

  &:nth-of-type(4n+1) {
    .post-top-slope, .post-bottom-slope {
      @extend .downward-slope;
    }
  }
  &:nth-of-type(4n+3) {
    .post-top-slope, .post-bottom-slope {
      @extend .upward-slope;
    }
  }

  /***************************************************/
  /* Colors */
  /***************************************************/

  &:nth-of-type(2n+1) {
    .post-content, .post-top-slope, .post-bottom-slope {
      background-color: $mine-shaft;
      color: white;
      .heading {
        border-bottom-color: rgba(white, .2);
        .post-title a {
          color: white;
        }
      }
    }
  }

  &:nth-of-type(2n+0) {
    @extend .dark-list-items;
    @extend .more-opaque-code;
    figure:before {
      border-top-color: rgba($mine-shaft, .4);
    }
  }
}

